# zip-charset-rectifier

./: README.md  pyproject.toml
src/zip_charset_rectifier/: cli.py  gui.py  libzipcharsetconv.py
