[project]
name = "zip_charset_rectifier"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Winterreisender", email = "winterreisender2019@qq.com"},
]
dependencies = [
    "rarfile>=4.2",
    "tkinterdnd2>=0.4.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.9.0",
]


